# stateset-sequencer

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  GETTING_STARTED.md  LICENSE  Makefile  QUICK_WINS_SUMMARY.md  README.md  SECURITY.md  SYSTEM_OVERVIEW.md  UPGRADE_SUMMARY.md  build.rs  deny.toml  docker-compose.yml  local_sequencer_guide.md  package-lock.json  package.json  whitepaper.html
.cargo/: audit.toml
.github/workflows/: ci.yml
benches/: sequencer_bench.rs
cli/: package.json
contracts/: foundry.toml
contracts/src/: StateSetAnchor.sol
docs/: AGENT_INTEGRATION.md  ANCHORING_OVERVIEW.md  API_REFERENCE.md  AUTORESEARCH.md  DEMO_GUIDE.md  DEPLOYMENT.md  DISASTER_RECOVERY.md  E2E_TEST_OVERVIEW.md  EVENT_TYPES.md  PERFORMANCE.md  PERFORMANCE_BENCHMARKS.md  RUNBOOK.md  SECURITY.md  SECURITY_HARDENING.md  SLO.md  VEC_V1_SPEC.md  VES_CHAIN_1_DEMO.md  VES_CHAIN_1_SPECIFICATION.md  VES_CONTRACT_1_DEMO.md  VES_CONTRACT_1_SPECIFICATION.md  VES_ENC_1_DEMO.md  VES_ENC_1_SPECIFICATION.md  VES_MULTI_1_DEMO.md  VES_MULTI_1_SPECIFICATION.md  VES_SIG_1_DEMO.md  VES_SIG_1_SPECIFICATION.md  VES_SPEC.md  VES_STARK_1_DEMO.md  VES_STARK_1_SPECIFICATION.md  VES_V1_OVERVIEW.md  ZK_INTEGRATION_GUIDE.md  observability.md  openapi.yaml  whitepaper.md  yellowpaper.md
docs/adr/: 001-use-postgresql-for-ordering.md  002-domain-separated-hashing.md  003-trait-based-abstraction.md
docs/monitoring/: MONITORING_GUIDE.md  grafana-dashboard.json
examples/: ai-commerce-agent-demo-output.md  ai-commerce-agent-demo.ts
k8s/: README.md  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  kustomization.yaml  namespace.yaml  pdb.yaml  secret.example.yaml  service.yaml  serviceaccount.yaml
k8s/gmp/: podmonitoring.yaml  rules.yaml
k8s/stateset-sequencer/: Chart.yaml
load/: README.md  agents_register.js  mixed_workload.js  runner.json  sequencer_ingest.js  sequencer_query.js
load/profiles/: smoke.json  stress.json  sustained.json
migrations/postgres/: 001_production_postgres.sql  002_ves_v1_tables.sql  003_constraints.sql  004_ves_validity_proofs.sql  005_ves_compliance_proofs.sql  006_key_rotation_policies.sql  007_encryption_groups.sql  008_command_dedupe.sql  009_api_keys.sql  010_ves_sequence_counters.sql  011_x402_payments.sql  012_ves_compliance_proofs_witness_commitment.sql  013_widen_entity_versions_receipt_key_version.sql  014_widen_event_identifier_columns.sql  015_pqc_key_algorithm.sql  016_x402_nonce_ttl.sql
migrations/sqlite/: 001_local_agent_sqlite.sql
monitoring/: prometheus_rules.yaml
proptest-regressions/infra/: ves_commitment.txt
proto/: sequencer.proto  sequencer_v2.proto
scripts/: cargo-local.sh  dev-setup.sh  redeploy_sequencer_gke.sh  run_demo.sh  run_e2e_demo.sh  run_load_test.sh  run_zk_demo.sh  x402_demo.mjs  zk_compliance_demo.mjs
src/: anchor.rs  lib.rs  main.rs  migrations.rs  server.rs
src/api/: mod.rs  (+5 more)
tests/: api_integration_test.rs  complex_integration_test.rs  grpc_integration_test.rs  leader_election_integration_test.rs  postgres_integration_test.rs  postgres_persistence_test.rs  property_test.rs  sequencer_integration_test.rs  x402_integration_test.rs
(+119 files in other folders)
