[package]
name = "stateset-sequencer"
version = "0.1.1"
edition = "2021"
authors = ["StateSet Core Infrastructure"]
description = "Verifiable Event Sync (VES) sequencer for deterministic event ordering and state projection"
license = "MIT"
repository = "https://github.com/stateset/stateset-sequencer"

[features]
default = ["full"]
full = ["grpc", "telemetry", "anchoring", "schema-validation"]

# Enable gRPC service (adds tonic/prost dependencies)
grpc = []

# Enable OpenTelemetry distributed tracing and OTLP export
telemetry = []

# Enable L2 blockchain anchoring (adds alloy dependency)
anchoring = []

# Enable JSON Schema validation (adds jsonschema dependency)
schema-validation = []

# Enable SQLite backend for embedded/local agents
sqlite = []

# Enable payload encryption at rest
encryption = []

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# gRPC framework
tonic = "0.12"
prost = "0.13"
prost-types = "0.13"

# Database access
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "sqlite", "uuid", "chrono", "json", "migrate", "macros"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_json_canonicalizer = "0.3"  # RFC 8785 JSON Canonicalization Scheme
serde_repr = "0.1"

# JSON Schema validation
jsonschema = "0.26"

# Cryptography
sha2 = "0.10"
aes-gcm = "0.10"
rs_merkle = "1"
ed25519-dalek = { version = "2", features = ["rand_core", "serde"] }
hpke = "0.12"
x25519-dalek = { version = "2", features = ["static_secrets"] }

# Authentication
jsonwebtoken = "9"
rand = "0.8"
base64 = "0.22"

# UUID and time
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Async traits
async-trait = "0.1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# OpenTelemetry observability
opentelemetry = { version = "0.24", features = ["metrics", "trace"] }
opentelemetry_sdk = { version = "0.24", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.17", features = ["metrics", "trace", "tonic"] }
tracing-opentelemetry = "0.25"

# Configuration
config = "0.14"

# HTTP/REST (optional, alongside gRPC)
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Hex encoding for hashes
hex = "0.4"

# Ethereum/EVM interaction
alloy = { version = "0.8", features = ["full", "signer-local"] }

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
serial_test = "3"
fake = { version = "2", features = ["derive", "uuid", "chrono"] }
proptest = "1"
http-body-util = "0.1"
mockall = "0.13"
criterion = { version = "0.5", features = ["async_tokio"] }

[lib]
name = "stateset_sequencer"
path = "src/lib.rs"

[[bin]]
name = "stateset-sequencer"
path = "src/main.rs"

[[bin]]
name = "stateset-sequencer-admin"
path = "src/bin/admin.rs"

[profile.release]
lto = true
codegen-units = 1

[[bench]]
name = "sequencer_bench"
harness = false
